--- a/public/.htaccess
+++ b/public/.htaccess
@@ -13,6 +13,9 @@
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_URI} (.+)/$
     RewriteRule ^ %1 [L,R=301]
+    
+    #RewriteCond %{THE_REQUEST} ^GET.*index\.php [NC]
+    #RewriteRule (.*?)index\.php/*(.*) $1$2 [R=301,NE,L]
 
     # Handle Front Controller...
     RewriteCond %{REQUEST_FILENAME} !-d
