--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^7.1.3",
         "fabpot/goutte": "^3.2",
         "fideloper/proxy": "^4.0",
+        "google/cloud-vision": "^0.11.3",
         "irazasyed/telegram-bot-sdk": "^2.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
