--- a/.env.example
+++ b/.env.example
@@ -41,3 +41,7 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 TELEGRAM_BOT_TOKEN=
 GOOGLE_PROJECT_ID=
 RESUME_URL=
+GOOGLE_APPLICATION_CREDENTIALS=
+TELEGRAM_OWNER_ID=
+TELEGRAM_CHANNEL=
+TELEGRAM_GROUP=
