--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,13 @@
 /node_modules
 /public/hot
 /public/storage
-/public/*log
 /storage/*.key
 /vendor
-/.idea
-/.vscode
-/.vagrant
+.env
+.phpunit.result.cache
 Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
-.env
-*_log
-/public/uploads
+/.idea
+/storage/framework/*
