--- a/.env.example
+++ b/.env.example
@@ -47,3 +47,10 @@ TELEGRAM_BOT_NAME=
 TELEGRAM_BOT_TOKEN=
 TELEGRAM_CHANNEL=
 TELEGRAM_GROUP=
+
+GOOGLE_PROJECT_ID=
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT_URI=
+GOOGLE_ALLOW_MULTITPLE_CREDENTIALS
+GOOGLE_ALLOW_JSON_ENCRYPT
