--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,9 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "ext-curl": "*",
+        "ext-json": "*",
+        "dacastro4/laravel-gmail": "^1.1",
         "fideloper/proxy": "^4.0",
         "irazasyed/telegram-bot-sdk": "^3.0",
         "laravel/framework": "5.8.*",
