[UPDATE] Retrieving e-mails and preparing to send

--- a/.env.example
+++ b/.env.example
@@ -47,6 +47,7 @@ TELEGRAM_BOT_NAME=
 TELEGRAM_BOT_TOKEN=
 TELEGRAM_CHANNEL=
 TELEGRAM_GROUP=
+TELEGRAM_OWNER_ID=144068960
 
 GOOGLE_PROJECT_ID=
 GOOGLE_CLIENT_ID=
