--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.1.3",
         "ext-curl": "*",
         "ext-json": "*",
+        "ext-dom": "*",
         "dacastro4/laravel-gmail": "^1.1",
         "fideloper/proxy": "^4.0",
         "irazasyed/telegram-bot-sdk": "^3.0",
