--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,10 @@
     "require": {
         "php": "^7.1.3",
         "ext-curl": "*",
-        "ext-json": "*",
         "ext-dom": "*",
+        "ext-json": "*",
         "dacastro4/laravel-gmail": "^1.1",
+        "fabpot/goutte": "^3.2",
         "fideloper/proxy": "^4.0",
         "irazasyed/telegram-bot-sdk": "^3.0",
         "laravel/framework": "5.8.*",
