--- a/.env.example
+++ b/.env.example
@@ -55,3 +55,5 @@ GOOGLE_CLIENT_SECRET=
 GOOGLE_REDIRECT_URI=
 GOOGLE_ALLOW_MULTITPLE_CREDENTIALS
 GOOGLE_ALLOW_JSON_ENCRYPT
+
+CRAWLER_SKIP_DATA_CHECK=false
