[UPDATE] New bot command

--- a/.env.example
+++ b/.env.example
@@ -49,6 +49,11 @@ TELEGRAM_CHANNEL=
 TELEGRAM_GROUP=
 TELEGRAM_OWNER_ID=144068960
 
+TELEGRAM_BOT_NAME2=
+TELEGRAM_BOT_TOKEN2=
+TELEGRAM_CHANNEL2=
+TELEGRAM_GROUP2=
+
 GOOGLE_PROJECT_ID=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
