--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,8 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "App\\Models\\": "app/Models"
         },
         "classmap": [
             "database/seeds",
