--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "ext-dom": "*",
         "ext-json": "*",
         "dacastro4/laravel-gmail": "^1.1",
+        "doctrine/dbal": "^2.9",
         "fabpot/goutte": "^3.2",
         "fideloper/proxy": "^4.0",
         "irazasyed/telegram-bot-sdk": "^3.0",
