--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,9 @@
         }
     },
     "autoload": {
+        "files": [
+            "app/Helpers/Helper.php"
+        ],
         "psr-4": {
             "App\\": "app/",
             "App\\Models\\": "app/Models"
