[UPDATE] Change the send opportunity flow to first send the to approval

--- a/.env.example
+++ b/.env.example
@@ -62,3 +62,7 @@ GOOGLE_ALLOW_MULTITPLE_CREDENTIALS
 GOOGLE_ALLOW_JSON_ENCRYPT
 
 CRAWLER_SKIP_DATA_CHECK=false
+
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
+CLOUDINARY_CLOUD_NAME=
