--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "fideloper/proxy": "^4.0",
         "irazasyed/telegram-bot-sdk": "^3.0",
         "jrm2k6/cloudder": "^0.6.0",
-        "laravel/framework": "5.8.*",
+        "laravel/framework": "^5.8",
         "laravel/tinker": "^1.0",
         "spatie/emoji": "^2.0"
     },
