--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "jrm2k6/cloudder": "^0.6.0",
         "laravel/framework": "^5.8",
         "laravel/tinker": "^1.0",
-        "spatie/emoji": "^2.0"
+        "spatie/emoji": "^2.0",
+        "guzzlehttp/guzzle": "6.4.*"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.6",
