--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,14 @@
         "doctrine/dbal": "^2.9",
         "fabpot/goutte": "^3.2",
         "fideloper/proxy": "^4.0",
+        "graham-campbell/github": "^8.4",
+        "guzzlehttp/guzzle": "6.4.*",
         "irazasyed/telegram-bot-sdk": "^3.0",
         "jrm2k6/cloudder": "^0.6.0",
         "laravel/framework": "^5.8",
         "laravel/tinker": "^1.0",
-        "spatie/emoji": "^2.0",
-        "guzzlehttp/guzzle": "6.4.*"
+        "php-http/guzzle6-adapter": "^2.0",
+        "spatie/emoji": "^2.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.6",
