[FEAT] Downgrade symfony/var-exporter and symfony/cache-contracts to support PHP 7.1
Took 6 minutes

--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,9 @@
         "laravel/framework": "^5.8",
         "laravel/tinker": "^1.0",
         "php-http/guzzle6-adapter": "^2.0",
-        "spatie/emoji": "^2.0"
+        "spatie/emoji": "^2.0",
+        "symfony/cache-contracts": "^1.1.7",
+        "symfony/var-exporter": "^4.4.2"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.6",
