--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "ext-dom": "*",
         "ext-json": "*",
         "dacastro4/laravel-gmail": "^3.0",
+        "dingo/api": "^2.4",
         "doctrine/dbal": "^2.9",
         "fabpot/goutte": "^3.2",
         "fideloper/proxy": "^4.0",
@@ -23,8 +24,11 @@
         "jrm2k6/cloudder": "^0.6.0",
         "laravel/framework": "^5.8",
         "laravel/tinker": "^1.0",
+        "laravelcollective/html": "^5.8",
         "php-http/guzzle6-adapter": "^2.0",
+        "prettus/l5-repository": "^2.6",
         "spatie/emoji": "^2.0",
+        "spatie/laravel-fractal": "^5.4",
         "symfony/cache-contracts": "^1.1.7",
         "symfony/var-exporter": "^4.4.2"
     },
