[FEAT] Add repositories, dingo api, web controllers
Took 50 minutes

--- a/.env.example
+++ b/.env.example
@@ -66,3 +66,13 @@ CRAWLER_SKIP_DATA_CHECK=false
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
 CLOUDINARY_CLOUD_NAME=
+
+API_STANDARDS_TREE=vnd
+API_SUBTYPE=phpdfbot
+API_PREFIX=api
+API_DOMAIN=local.phpdfbot.com
+API_VERSION=v1
+API_NAME=PHPDFBOT
+API_CONDITIONAL_REQUEST=false
+API_DEFAULT_FORMAT=json
+API_DEBUG=true
