--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "laravel/framework": "^5.8",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.8",
+        "league/html-to-markdown": "^4.9",
         "php-http/guzzle6-adapter": "^2.0",
         "prettus/l5-repository": "^2.6",
         "spatie/emoji": "^2.0",
