--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "guzzlehttp/guzzle": "6.4.*",
         "irazasyed/telegram-bot-sdk": "^3.0",
         "jrm2k6/cloudder": "^0.6.0",
+        "laravel-notification-channels/telegram": "^0.1.1",
         "laravel/framework": "^5.8",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.8",
