--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,8 @@ MAIL_PORT='465'
 MAIL_USERNAME='****@gmail.com'
 MAIL_PASSWORD='****'
 MAIL_ENCRYPTION='ssl'
+MAIL_FROM_ADDRESS
+MAIL_FROM_NAME
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
@@ -45,14 +47,10 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 TELEGRAM_BOT_NAME=
 TELEGRAM_BOT_TOKEN=
-TELEGRAM_CHANNEL=
-TELEGRAM_GROUP=
-TELEGRAM_OWNER_ID=144068960
+TELEGRAM_OWNER_ID=
+TELEGRAM_GROUP_ADM=
 
-TELEGRAM_BOT_NAME2=
-TELEGRAM_BOT_TOKEN2=
-TELEGRAM_CHANNEL2=
-TELEGRAM_GROUP2=
+DIALOGFLOW_TOKEN=
 
 GOOGLE_PROJECT_ID=
 GOOGLE_CLIENT_ID=
@@ -76,3 +74,7 @@ API_NAME=PHPDFBOT
 API_CONDITIONAL_REQUEST=false
 API_DEFAULT_FORMAT=json
 API_DEBUG=true
+
+GITHUB_TOKEN=
+GITHUB_USERNAME=
+GITHUB_REPO=
