[FEAT] Upgrade Laravel version to 6.2
Took 2 hours 16 minutes

--- a/.env.example
+++ b/.env.example
@@ -50,6 +50,13 @@ TELEGRAM_BOT_TOKEN=
 TELEGRAM_OWNER_ID=
 TELEGRAM_GROUP_ADM=
 
+TELEGRAM_API_ID=1181993
+TELEGRAM_API_HASH=544edfc0711491d3c63c3e46efac8668
+#teste
+TELEGRAM_SERVER=149.154.167.40:443
+#production
+#TELEGRAM_SERVER=149.154.167.50:443
+
 DIALOGFLOW_TOKEN=
 
 GOOGLE_PROJECT_ID=
