--- a/composer.json
+++ b/composer.json
@@ -8,42 +8,41 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.1.3",
+        "php": "^7.2",
         "ext-curl": "*",
         "ext-dom": "*",
         "ext-json": "*",
         "ext-intl": "*",
-        "bensampo/laravel-enum": "^1.29",
-        "dacastro4/laravel-gmail": "^3.0",
+        "bensampo/laravel-enum": "^1.30",
+        "dacastro4/laravel-gmail": "^3.2",
         "dingo/api": "^2.4",
-        "doctrine/dbal": "^2.9",
-        "fabpot/goutte": "^3.2",
-        "fideloper/proxy": "^4.0",
-        "graham-campbell/github": "^8.4",
-        "graham-campbell/markdown": "^11.1",
-        "guzzlehttp/guzzle": "6.4.*",
+        "doctrine/dbal": "^2.10",
+        "fabpot/goutte": "^4.0",
+        "fideloper/proxy": "^4.2",
+        "graham-campbell/github": "^8.5",
+        "graham-campbell/markdown": "^11.2",
+        "guzzlehttp/guzzle": "^6.5",
         "irazasyed/telegram-bot-sdk": "^3.0",
         "jrm2k6/cloudder": "^0.6.0",
-        "laravel/framework": "^5.8",
-        "laravel/tinker": "^1.0",
-        "laravelcollective/html": "^5.8",
+        "laravel/framework": "^6.2",
+        "laravel/tinker": "^2.1",
+        "laravelcollective/html": "^6.0",
         "league/html-to-markdown": "^4.9",
         "php-http/guzzle6-adapter": "^2.0",
         "prettus/l5-repository": "^2.6",
         "rap2hpoutre/laravel-log-viewer": "^1.3",
-        "spatie/emoji": "^2.0",
-        "spatie/laravel-fractal": "^5.4",
-        "symfony/cache-contracts": "^1.1.7",
-        "symfony/var-exporter": "^4.4.2"
+        "spatie/emoji": "^2.1",
+        "spatie/laravel-fractal": "^5.6",
+        "symfony/cache-contracts": "^2.0",
+        "symfony/var-exporter": "^5.0"
     },
     "require-dev": {
-        "barryvdh/laravel-ide-helper": "^2.6",
         "beyondcode/laravel-dump-server": "^1.0",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^7.5"
+        "phpunit/phpunit": "^8.0"
     },
     "config": {
         "optimize-autoloader": true,
