[FEAT] Upgrade Laravel version to 6.2 - Apply patches
Took 27 minutes

--- a/composer.json
+++ b/composer.json
@@ -54,6 +54,7 @@
         "laravel": {
             "dont-discover": []
         },
+        "composer-exit-on-patch-failure": true,
         "patches": {
           "graham-campbell/github": {
             "Fix the compatibility with Laravel 6+": "patches/graham-campbell-github-102.patch"
