--- a/composer.json
+++ b/composer.json
@@ -14,20 +14,20 @@
         "ext-intl": "*",
         "ext-json": "*",
         "bensampo/laravel-enum": "^1.30",
-        "cweagans/composer-patches": "^1.6",
-        "dacastro4/laravel-gmail": "^3.2",
-        "dingo/api": "^2.4",
+        "cweagans/composer-patches": "1.6.7",
+        "dacastro4/laravel-gmail": "3.2.4",
+        "dingo/api": "2.4.5",
         "doctrine/dbal": "^2.10",
         "fabpot/goutte": "^4.0",
         "fideloper/proxy": "^4.2",
-        "graham-campbell/github": "^8.5",
+        "graham-campbell/github": "8.5.0",
         "graham-campbell/markdown": "^11.2",
         "guzzlehttp/guzzle": "^6.5",
         "irazasyed/telegram-bot-sdk": "^3.0",
         "jrm2k6/cloudder": "^0.6.0",
-        "laravel/framework": "^6.2",
+        "laravel/framework": "6.2.0",
         "laravel/tinker": "^2.1",
-        "laravelcollective/html": "^6.0",
+        "laravelcollective/html": "6.0.3",
         "league/html-to-markdown": "^4.9",
         "php-http/guzzle6-adapter": "^2.0",
         "prettus/l5-repository": "^2.6",
