--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "graham-campbell/github": "^8.5",
         "graham-campbell/markdown": "^11.2",
         "guzzlehttp/guzzle": "^6.5",
-        "irazasyed/telegram-bot-sdk": "^3.0",
+        "irazasyed/telegram-bot-sdk": "dev-develop",
         "jrm2k6/cloudder": "^0.6.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.1",
