--- a/composer.json
+++ b/composer.json
@@ -54,7 +54,12 @@
         "laravel": {
             "dont-discover": []
         },
-        "composer-exit-on-patch-failure": true
+        "composer-exit-on-patch-failure": true,
+        "patches": {
+            "dacastro4/laravel-gmail": {
+                "Replace Laravel 5- helper": "patches/dacastro4-laravel-gmail-136.patch"
+            }
+        }
     },
     "autoload": {
         "files": [
