--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.1",
         "laravelcollective/html": "6.0.3",
+        "league/flysystem-aws-s3-v3": "^1.0",
         "league/flysystem-sftp": "^1.0",
         "league/html-to-markdown": "^4.9",
         "php-http/guzzle6-adapter": "^2.0",
