--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "ext-dom": "*",
         "ext-intl": "*",
         "ext-json": "*",
+        "aws/aws-sdk-php-laravel": "^3.4",
         "bensampo/laravel-enum": "^1.30",
         "cweagans/composer-patches": "^1.6",
         "dacastro4/laravel-gmail": "^3.2",
@@ -33,7 +34,6 @@
         "league/html-to-markdown": "^4.9",
         "php-http/guzzle6-adapter": "^2.0",
         "prettus/l5-repository": "^2.6",
-        "rap2hpoutre/laravel-log-viewer": "^1.3",
         "spatie/emoji": "^2.1",
         "spatie/laravel-fractal": "^5.6",
         "symfony/cache-contracts": "^2.0",
