[FEAT] PHP 7.4 & MadelineProto
Took 6 hours 30 minutes

--- a/composer.json
+++ b/composer.json
@@ -8,15 +8,16 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2",
+        "php": "^7.4",
         "ext-curl": "*",
         "ext-dom": "*",
         "ext-intl": "*",
         "ext-json": "*",
         "aws/aws-sdk-php-laravel": "^3.4",
-        "bensampo/laravel-enum": "^1.30",
+        "bensampo/laravel-enum": "^1.9",
         "cweagans/composer-patches": "^1.6",
         "dacastro4/laravel-gmail": "^3.2",
+        "danog/madelineproto": "^5.0",
         "dingo/api": "^2.4",
         "doctrine/dbal": "^2.10",
         "fabpot/goutte": "^4.0",
@@ -25,15 +26,16 @@
         "graham-campbell/markdown": "^11.2",
         "guzzlehttp/guzzle": "^6.5",
         "irazasyed/telegram-bot-sdk": "dev-develop",
-        "jrm2k6/cloudder": "^0.6.0",
-        "laravel/framework": "^6.2",
-        "laravel/tinker": "^2.1",
-        "laravelcollective/html": "6.0.3",
+        "jrm2k6/cloudder": "^0.6",
+        "laravel/framework": "^6.14",
+        "laravel/tinker": "^2.2",
+        "laravelcollective/html": "^6.0",
         "league/flysystem-aws-s3-v3": "^1.0",
         "league/flysystem-sftp": "^1.0",
         "league/html-to-markdown": "^4.9",
         "maxbanton/cwh": "^2.0",
         "monolog/monolog": "^2.0",
+        "paragonie/random_compat": "2.*",
         "php-http/guzzle6-adapter": "^2.0",
         "prettus/l5-repository": "^2.6",
         "spatie/emoji": "^2.1",
