[FEAT] Configure tevun stuffs to deployment

--- a/.env.stage
+++ b/.env.stage
@@ -1,1 +1,92 @@
 COMPOSE_PROJECT_NAME=phpdfbot.devi.tools
+
+APP_NAME=Laravel
+APP_ENV=local
+APP_KEY=
+APP_DEBUG=true
+APP_URL=http://localhost
+
+LOG_CHANNEL=stack
+
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=homestead
+DB_USERNAME=homestead
+DB_PASSWORD=secret
+
+BROADCAST_DRIVER=log
+CACHE_DRIVER=file
+QUEUE_CONNECTION=sync
+SESSION_DRIVER=file
+SESSION_LIFETIME=120
+
+REDIS_HOST=127.0.0.1
+REDIS_PASSWORD=null
+REDIS_PORT=6379
+
+MAIL_DRIVER='smtp'
+MAIL_HOST='smtp.gmail.com'
+MAIL_PORT='465'
+MAIL_USERNAME='****@gmail.com'
+MAIL_PASSWORD='****'
+MAIL_ENCRYPTION='ssl'
+MAIL_FROM_ADDRESS
+MAIL_FROM_NAME
+
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_DEFAULT_REGION=us-east-1
+AWS_BUCKET=
+
+PUSHER_APP_ID=
+PUSHER_APP_KEY=
+PUSHER_APP_SECRET=
+PUSHER_APP_CLUSTER=mt1
+
+MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
+MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+TELEGRAM_BOT_NAME=
+TELEGRAM_BOT_TOKEN=
+TELEGRAM_OWNER_ID=
+TELEGRAM_GROUP_ADM=
+
+TELEGRAM_API_ID=
+TELEGRAM_API_HASH=
+TELEGRAM_SERVER=149.154.167.40:443
+
+DIALOGFLOW_TOKEN=
+
+GOOGLE_PROJECT_ID=
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT_URI=
+GOOGLE_ALLOW_MULTITPLE_CREDENTIALS
+GOOGLE_ALLOW_JSON_ENCRYPT
+
+CRAWLER_SKIP_DATA_CHECK=false
+
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
+CLOUDINARY_CLOUD_NAME=
+
+API_STANDARDS_TREE=vnd
+API_SUBTYPE=phpdfbot
+API_PREFIX=api
+API_DOMAIN=local.phpdfbot.com
+API_VERSION=v1
+API_NAME=PHPDFBOT
+API_CONDITIONAL_REQUEST=false
+API_DEFAULT_FORMAT=json
+API_DEBUG=true
+
+GITHUB_TOKEN=
+GITHUB_USERNAME=
+GITHUB_REPO=
+
+FTP_HOST=
+FTP_USERNAME=
+FTP_PASSWORD=
+FTP_ROOT=
+FTP_PORT=
