--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "ext-dom": "*",
         "ext-intl": "*",
         "ext-json": "*",
+        "aws/aws-sdk-php-laravel": "^3.4",
         "bensampo/laravel-enum": "^1.9",
         "cweagans/composer-patches": "^1.6",
         "dacastro4/laravel-gmail": "^3.2",
@@ -29,6 +30,7 @@
         "laravel/framework": "^6.14",
         "laravel/tinker": "^2.2",
         "laravelcollective/html": "^6.0",
+        "league/flysystem-aws-s3-v3": "^1.0",
         "league/html-to-markdown": "^4.9",
         "maxbanton/cwh": "^2.0",
         "monolog/monolog": "^2.0",
