--- a/.env.example
+++ b/.env.example
@@ -58,11 +58,15 @@ TELEGRAM_SERVER=149.154.167.40:443
 DIALOGFLOW_TOKEN=
 
 GOOGLE_PROJECT_ID=
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+GOOGLE_SERVICE_CLIENT_ID=
+GOOGLE_OAUTH_CLIENT_ID=
 GOOGLE_REDIRECT_URI=
-GOOGLE_ALLOW_MULTITPLE_CREDENTIALS
-GOOGLE_ALLOW_JSON_ENCRYPT
+GOOGLE_PRIVATE_KEY_ID=
+GOOGLE_PRIVATE_KEY=
+GOOGLE_CLIENT_EMAIL=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REFRESH_TOKEN=
+
 
 CRAWLER_SKIP_DATA_CHECK=false
 
