--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "doctrine/dbal": "^2.10",
         "fabpot/goutte": "^4.0",
         "fideloper/proxy": "^4.2",
+        "google/cloud-vision": "^0.25.0",
         "graham-campbell/github": "^8.5",
         "graham-campbell/markdown": "^11.2",
         "guzzlehttp/guzzle": "^6.5",
