--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,7 @@
         "rap2hpoutre/laravel-log-viewer": "^1.3",
         "spatie/emoji": "^2.1",
         "spatie/laravel-fractal": "^5.6",
+        "spatie/laravel-web-tinker": "^1.6",
         "symfony/cache-contracts": "^2.0",
         "symfony/var-exporter": "^5.0"
     },
