--- a/.env.example
+++ b/.env.example
@@ -24,14 +24,14 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER='smtp'
+MAIL_MAILER=smtp
 MAIL_HOST='smtp.gmail.com'
 MAIL_PORT='465'
 MAIL_USERNAME='****@gmail.com'
 MAIL_PASSWORD='****'
 MAIL_ENCRYPTION='ssl'
-MAIL_FROM_ADDRESS
-MAIL_FROM_NAME
+MAIL_FROM_ADDRESS=null
+MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
