--- a/composer.json
+++ b/composer.json
@@ -13,45 +13,41 @@
         "ext-dom": "*",
         "ext-intl": "*",
         "ext-json": "*",
-        "aws/aws-sdk-php-laravel": "^3.4",
         "bensampo/laravel-enum": "^1.9",
         "cweagans/composer-patches": "^1.6",
-        "dacastro4/laravel-gmail": "^3.2",
+        "dacastro4/laravel-gmail": "^4.0",
         "danog/madelineproto": "^5.0",
-        "dingo/api": "^2.4",
+        "dingo/api": "^3.0",
         "doctrine/dbal": "^2.10",
         "fabpot/goutte": "^4.0",
         "fideloper/proxy": "^4.2",
+        "fruitcake/laravel-cors": "^1.0",
         "google/cloud-vision": "^0.25.0",
         "graham-campbell/github": "^8.5",
         "graham-campbell/markdown": "^11.2",
         "guzzlehttp/guzzle": "^6.5",
         "irazasyed/telegram-bot-sdk": "dev-develop",
         "jrm2k6/cloudder": "^0.6",
-        "laravel/framework": "^6.14",
+        "laravel/framework": "^7.0",
         "laravel/tinker": "^2.2",
         "laravelcollective/html": "^6.1",
-        "league/flysystem-aws-s3-v3": "^1.0",
         "league/html-to-markdown": "^4.9",
         "maxbanton/cwh": "^2.0",
         "monolog/monolog": "^2.0",
         "paragonie/random_compat": "2.*",
         "php-http/guzzle6-adapter": "^2.0",
         "prettus/l5-repository": "^2.6",
-        "rap2hpoutre/laravel-log-viewer": "^1.3",
         "spatie/emoji": "^2.1",
-        "spatie/laravel-fractal": "^5.6",
-        "spatie/laravel-web-tinker": "^1.6",
-        "symfony/cache-contracts": "^2.0",
-        "symfony/var-exporter": "^5.0"
+        "spatie/laravel-fractal": "^5.6"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
+	    "facade/ignition": "^2.0",
         "filp/whoops": "^2.0",
-        "fzaninotto/faker": "^1.4",
-        "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^8.0"
+        "fzaninotto/faker": "^1.9.1",
+        "mockery/mockery": "^1.3.1",
+        "nunomaduro/collision": "^4.1",
+        "phpunit/phpunit": "^8.5"
     },
     "config": {
         "optimize-autoloader": true,
@@ -63,11 +59,7 @@
             "dont-discover": []
         },
         "composer-exit-on-patch-failure": true,
-        "patches": {
-            "dacastro4/laravel-gmail": {
-                "Replace Laravel 5- helper": "patches/dacastro4-laravel-gmail-136.patch"
-            }
-        }
+        "patches": {}
     },
     "autoload": {
         "files": [
