--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "google/cloud-vision": "^0.25.0",
         "graham-campbell/github": "^8.5",
         "graham-campbell/markdown": "^11.2",
-        "guzzlehttp/guzzle": "^6.5",
+        "guzzlehttp/guzzle": "^7.2",
         "irazasyed/telegram-bot-sdk": "dev-develop",
         "jrm2k6/cloudder": "^0.6",
         "laravel/framework": "^7.0",
@@ -34,8 +34,8 @@
         "maxbanton/cwh": "^2.0",
         "monolog/monolog": "^2.0",
         "paragonie/random_compat": "2.*",
-        "php-http/guzzle6-adapter": "^2.0",
         "prettus/l5-repository": "^2.6",
+        "sentry/sentry-laravel": "^2.3",
         "spatie/emoji": "^2.1",
         "spatie/laravel-fractal": "^5.6"
     },
